# Agent-Consent-Protocol

./: .gitignore  AUDIT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  OPENCLAW-INSTALL.md  README.md  SECURITY-AUDIT-2026-02-05.md  SECURITY-AUDIT.md  SECURITY.md  SKILL.md  SPEC.md  THREAT-MODEL.md  index.html  install.sh  script.js  test_agent.py
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: ci.yml  publish.yml
cli/: package-lock.json  package.json
cli/src/: index.ts
cli/src/audit/: logger.ts
cli/src/channels/: telegram.ts  terminal.ts  webhook.ts
cli/src/cli/: contain.ts  init.ts  start-utils.ts  start.ts
cli/src/commands/: init.ts  policy.ts  run.ts  secret.ts  setup.ts  status.ts
cli/src/container/: consent-server.ts  docker.ts  http-proxy.ts  shell-wrappers.ts
cli/src/core/: audit.ts  channel.ts  gate.ts  policy.ts  types.ts
cli/src/crypto/: keys.ts
cli/src/integrations/: claude-code.ts
cli/src/interceptors/: shell-wrappers.ts  types.ts
cli/src/policy/: defaults.ts  engine.ts  parser.ts
cli/src/proxy/: consent-gate.ts  http-proxy.ts  mcp-proxy.ts  upstream-manager.ts
cli/src/sandbox/: credentials.ts  docker.ts  network.ts  process.ts
cli/src/tests/: audit.test.ts  channel.test.ts  consent-gate.test.ts  container.test.ts  credentials.test.ts  crypto.test.ts  docker.test.ts  gate.test.ts  http-proxy-connect.test.ts  http-proxy.test.ts  intercept-api.test.ts  policy-engine-extended.test.ts  policy-engine.test.ts  policy.test.ts  proxy-bootstrap.test.ts  shell-wrappers.test.ts  start-lock.test.ts  start-utils.test.ts  vm-nftables.test.ts
cli/src/vm/: nftables.ts  start-lock.ts
docker/: Dockerfile.claude-code
docs/: CNAME  DESIGN-v0.3.0-vm-openclaw.md  DESIGN-v1.md  INSTALL-v0.3.0-vm-openclaw.md  RELEASE-READINESS-v0.3.0.md  architecture.md  cloud-deployment.md  how-it-works.md  index.html  integration-guide.md  network-isolation.md  policy-reference.md  security-model.md  v0.2-to-v0.3.0.md
docs-site/: index.html  style.css
examples/: docker-compose.yml  quickstart.md
examples/langchain/: README.md  agent.py
examples/openclaw/: README.md  setup.sh
examples/policies/: default.json  development.json  strict.json
examples/terraform/aws/: main.tf
examples/terraform/azure/: main.tf
gateway/: Dockerfile  package-lock.json  package.json
gateway/src/: audit.ts  consent-store.ts  crypto.ts  index.ts  policy-engine.ts  server.ts  types.ts
gateway/src/channels/: cli.ts  telegram.ts  webhook.ts
gateway/test/: policy-engine.test.ts
policies/: claude-code.yml  default.yml  development.yml  openclaw.yml  strict.yml
sdk/python/: README.md  pyproject.toml
sdk/python/acp/: __init__.py  client.py  crypto.py  decorators.py  local.py  middleware.py  telegram_handler.py  types.py
sdk/python/examples/: basic_usage.py  langchain_example.py  langchain_middleware.py  openclaw_example.py  openclaw_integration.py
sdk/typescript/: package.json
sdk/typescript/src/: client.ts  crypto.ts  index.ts  middleware.ts  types.ts
templates/: default.yml  openclaw.yml  strict.yml
