[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "acp-sdk"
version = "0.1.0"
description = "Agent Consent Protocol — 2FA for AI Agents. Add human approval to any AI agent in 2 lines of code."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
    { name = "ACP Contributors" },
]
keywords = ["ai", "agent", "consent", "authorization", "2fa", "human-in-the-loop", "safety"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]

# ZERO required dependencies for local mode!
dependencies = []

[project.optional-dependencies]
# Remote mode (Telegram + Gateway)
remote = ["requests>=2.28.0"]
# Pretty terminal output
rich = ["rich>=13.0.0"]
# Full crypto verification
crypto = ["cryptography>=41.0.0"]
# Everything
all = ["requests>=2.28.0", "rich>=13.0.0", "cryptography>=41.0.0"]

[project.urls]
Homepage = "https://github.com/agent-consent-protocol/acp"
Documentation = "https://github.com/agent-consent-protocol/acp/tree/main/docs"
Repository = "https://github.com/agent-consent-protocol/acp"
Issues = "https://github.com/agent-consent-protocol/acp/issues"

[tool.hatch.build.targets.wheel]
packages = ["acp"]
