[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "acp-sdk"
version = "0.1.0"
description = "Agent Consent Protocol — 2FA for AI Agents. Add human approval to any AI agent action in 3 lines of code. Zero dependencies."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
    { name = "ACP Contributors" },
]
keywords = ["ai", "agent", "consent", "authorization", "2fa", "human-in-the-loop", "safety"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]

# ZERO required dependencies for Tier 1 (local terminal prompt).
# The entire SDK works with just the Python standard library.
dependencies = []

[project.optional-dependencies]
# Tier 2+3: Telegram and Gateway mode (only adds `requests`)
remote = ["requests>=2.28.0"]
# Tier 3: Cryptographic proof verification
crypto = ["cryptography>=41.0.0"]
# Everything
all = ["requests>=2.28.0", "cryptography>=41.0.0"]
# Dev tools
dev = ["pytest>=8.0", "ruff>=0.5.0"]

[project.urls]
Homepage = "https://github.com/agent-consent-protocol/acp"
Documentation = "https://github.com/agent-consent-protocol/acp/tree/main/docs"
Repository = "https://github.com/agent-consent-protocol/acp"
Issues = "https://github.com/agent-consent-protocol/acp/issues"

[tool.hatch.build.targets.wheel]
packages = ["acp"]
